--- a/Vitkund/Vitkund.csproj
+++ b/Vitkund/Vitkund.csproj
@@ -159,6 +159,113 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\admin\assets\css\animate.css" />
+    <Content Include="Content\admin\assets\css\bootstrap.css" />
+    <Content Include="Content\admin\assets\css\color-1.css" />
+    <Content Include="Content\admin\assets\css\date-picker.css" />
+    <Content Include="Content\admin\assets\css\dropzone.css" />
+    <Content Include="Content\admin\assets\css\feather-icon.css" />
+    <Content Include="Content\admin\assets\css\flag-icon.css" />
+    <Content Include="Content\admin\assets\css\font-awesome.css" />
+    <Content Include="Content\admin\assets\css\icofont.css" />
+    <Content Include="Content\admin\assets\css\index-d2d71a13aaad2171eaa6fc08d1f8968264ec860d2fcd23d8986c7d4e98f253a8.css" />
+    <Content Include="Content\admin\assets\css\index.css" />
+    <Content Include="Content\admin\assets\css\photoswipe.css" />
+    <Content Include="Content\admin\assets\css\responsive.css" />
+    <Content Include="Content\admin\assets\css\scrollbar.css" />
+    <Content Include="Content\admin\assets\css\style.css" />
+    <Content Include="Content\admin\assets\css\themify.css" />
+    <Content Include="Content\admin\assets\fonts\es-ct %281%29.svg" />
+    <Content Include="Content\admin\assets\fonts\es-ct.svg" />
+    <Content Include="Content\admin\assets\fonts\eu.svg" />
+    <Content Include="Content\admin\assets\fonts\gb-eng.svg" />
+    <Content Include="Content\admin\assets\fonts\gb-nir.svg" />
+    <Content Include="Content\admin\assets\fonts\gb-sct.svg" />
+    <Content Include="Content\admin\assets\fonts\gb-wls.svg" />
+    <Content Include="Content\admin\assets\fonts\ico\icofont.svg" />
+    <Content Include="Content\admin\assets\fonts\themify\themify.svg" />
+    <Content Include="Content\admin\assets\fonts\un.svg" />
+    <Content Include="Content\admin\assets\images\01.jpg" />
+    <Content Include="Content\admin\assets\images\010.jpg" />
+    <Content Include="Content\admin\assets\images\011.jpg" />
+    <Content Include="Content\admin\assets\images\012.jpg" />
+    <Content Include="Content\admin\assets\images\02.jpg" />
+    <Content Include="Content\admin\assets\images\03.jpg" />
+    <Content Include="Content\admin\assets\images\04.jpg" />
+    <Content Include="Content\admin\assets\images\05.jpg" />
+    <Content Include="Content\admin\assets\images\06.jpg" />
+    <Content Include="Content\admin\assets\images\07.jpg" />
+    <Content Include="Content\admin\assets\images\08.jpg" />
+    <Content Include="Content\admin\assets\images\09.jpg" />
+    <Content Include="Content\admin\assets\images\7.jpg" />
+    <Content Include="Content\admin\assets\images\avatar.jpg" />
+    <Content Include="Content\admin\assets\images\banner-1.jpg" />
+    <Content Include="Content\admin\assets\images\boy.png" />
+    <Content Include="Content\admin\assets\images\chinese.png" />
+    <Content Include="Content\admin\assets\images\default-skin.png" />
+    <Content Include="Content\admin\assets\images\default-skin.svg" />
+    <Content Include="Content\admin\assets\images\girl.png" />
+    <Content Include="Content\admin\assets\images\image-20.jpg" />
+    <Content Include="Content\admin\assets\images\images.svg" />
+    <Content Include="Content\admin\assets\images\img-26.jpg" />
+    <Content Include="Content\admin\assets\images\logo-icon.png" />
+    <Content Include="Content\admin\assets\images\logo.png" />
+    <Content Include="Content\admin\assets\images\malamalls-s.png" />
+    <Content Include="Content\admin\assets\images\malamalls.png" />
+    <Content Include="Content\admin\assets\images\man.png" />
+    <Content Include="Content\admin\assets\images\product-4.png" />
+    <Content Include="Content\admin\assets\images\product-6.jpg" />
+    <Content Include="Content\admin\assets\images\rectangle-26.jpg" />
+    <Content Include="Content\admin\assets\images\rectangle-27.jpg" />
+    <Content Include="Content\admin\assets\images\rectangle-28.jpg" />
+    <Content Include="Content\admin\assets\images\rectangle-29.jpg" />
+    <Content Include="Content\admin\assets\images\side-bar.png" />
+    <Content Include="Content\admin\assets\images\small-logo.png" />
+    <Content Include="Content\admin\assets\images\small-white-logo.png" />
+    <Content Include="Content\admin\assets\images\teacher.png" />
+    <Content Include="Content\admin\assets\images\teenager.png" />
+    <Content Include="Content\admin\assets\images\user.png" />
+    <Content Include="Content\admin\assets\images\woman.png" />
+    <Content Include="Content\admin\assets\js\analytics.js" />
+    <Content Include="Content\admin\assets\js\apex-chart.js" />
+    <Content Include="Content\admin\assets\js\bootstrap-notify.min.js" />
+    <Content Include="Content\admin\assets\js\bootstrap.bundle.min.js" />
+    <Content Include="Content\admin\assets\js\chart-widget.js" />
+    <Content Include="Content\admin\assets\js\config.js" />
+    <Content Include="Content\admin\assets\js\custom.js" />
+    <Content Include="Content\admin\assets\js\customizer.js" />
+    <Content Include="Content\admin\assets\js\datepicker.custom.js" />
+    <Content Include="Content\admin\assets\js\datepicker.en.js" />
+    <Content Include="Content\admin\assets\js\datepicker.js" />
+    <Content Include="Content\admin\assets\js\default.js" />
+    <Content Include="Content\admin\assets\js\dropzone-script.js" />
+    <Content Include="Content\admin\assets\js\dropzone.js" />
+    <Content Include="Content\admin\assets\js\ec.js" />
+    <Content Include="Content\admin\assets\js\feather-icon.js" />
+    <Content Include="Content\admin\assets\js\feather.min.js" />
+    <Content Include="Content\admin\assets\js\handlebars.js" />
+    <Content Include="Content\admin\assets\js\height-equal.js" />
+    <Content Include="Content\admin\assets\js\index-3434ecc8ee72db55dde518bd4f2a3f85d6c73b0dde839027aaedb790e40a4beb.js" />
+    <Content Include="Content\admin\assets\js\index.js" />
+    <Content Include="Content\admin\assets\js\jquery-3.5.1.min.js" />
+    <Content Include="Content\admin\assets\js\knob-chart.js" />
+    <Content Include="Content\admin\assets\js\knob.min.js" />
+    <Content Include="Content\admin\assets\js\moment.min.js" />
+    <Content Include="Content\admin\assets\js\nr-1216.min.js" />
+    <Content Include="Content\admin\assets\js\photoswipe-ui-default.min.js" />
+    <Content Include="Content\admin\assets\js\photoswipe.js" />
+    <Content Include="Content\admin\assets\js\photoswipe.min.js" />
+    <Content Include="Content\admin\assets\js\script.js" />
+    <Content Include="Content\admin\assets\js\sidebar-menu.js" />
+    <Content Include="Content\admin\assets\js\simplebar.js" />
+    <Content Include="Content\admin\assets\js\standardised_google_analytics_helpers-2a0d6d0a6b9087b30b4be07688eb3acaa6d4fed95642c7ea8e010d29a5ccec5c.js" />
+    <Content Include="Content\admin\assets\js\state.js" />
+    <Content Include="Content\admin\assets\js\stock-prices.js" />
+    <Content Include="Content\admin\assets\js\tooltip-init.js" />
+    <Content Include="Content\admin\assets\js\typeahead-custom.js" />
+    <Content Include="Content\admin\assets\js\typeahead.bundle.js" />
+    <Content Include="Content\admin\assets\js\typeahead.custom.js" />
+    <Content Include="Content\admin\assets\js\uc.js" />
     <Content Include="Content\assets\css\plugins\animation.css" />
     <Content Include="Content\assets\css\plugins\bootstrap-select.min.css" />
     <Content Include="Content\assets\css\plugins\euclid-circulara.css" />
@@ -375,6 +482,25 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Uploads\062618c9-3f42-48f6-80bd-f85eece8c5c3big_buck_bunny_720p_2mb.mp4" />
+    <Content Include="Content\Uploads\14d5597d-0446-42f0-81c4-130dfbbd827ccomponent.png" />
+    <Content Include="Content\Uploads\200f0134-349a-49df-882b-fa188c90afd6Bloomberglogo0709.png" />
+    <Content Include="Content\Uploads\21155309-cfa5-4dca-9471-d88b23d4c40dbig_buck_bunny_720p_2mb.mp4" />
+    <Content Include="Content\Uploads\245c90ee-a728-4eb4-8cc4-0c26c98adeebDany.png" />
+    <Content Include="Content\Uploads\32872f2a-62b9-41a5-9c27-89e3ee9a7d63big_buck_bunny_720p_2mb.mp4" />
+    <Content Include="Content\Uploads\37fc714a-b8f9-4125-b85f-40d71255aac8big_buck_bunny_720p_2mb.mp4" />
+    <Content Include="Content\Uploads\4cea512c-96f0-499d-8f6a-bd74d22c053abig_buck_bunny_720p_2mb.mp4" />
+    <Content Include="Content\Uploads\4fe2b908-3355-41cc-aac1-7e152103f4a5Dany.png" />
+    <Content Include="Content\Uploads\781adb25-74ad-48c8-84c8-e082bb4aa758big_buck_bunny_720p_2mb.mp4" />
+    <Content Include="Content\Uploads\7bbec580-bbc8-4803-8dcd-e2d5f1d57b65Bloomberglogo0709.png" />
+    <Content Include="Content\Uploads\80b06ed8-1114-4a19-bc61-938ee26fbae9Dany.png" />
+    <Content Include="Content\Uploads\b1da55ee-b3d4-45e2-98c8-b453a6b1d7c4Bloomberglogo0709.png" />
+    <Content Include="Content\Uploads\befb073b-ae28-4500-9215-2767eb62d15dDany.png" />
+    <Content Include="Content\Uploads\big_buck_bunny_720p_2mb.mp4" />
+    <Content Include="Content\Uploads\component %281%29.png" />
+    <Content Include="Content\Uploads\component.png" />
+    <Content Include="Content\Uploads\d7b47df5-6eed-428c-a3d4-24e64ea759eabig_buck_bunny_720p_2mb.mp4" />
+    <Content Include="Content\Uploads\d9aa01a0-1db0-4131-9934-911b0159e98abig_buck_bunny_720p_2mb.mp4" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -458,6 +584,17 @@
     <Content Include="Content\assets\images\home-01-hero-image.webp" />
     <Content Include="Content\assets\images\home-02-hero-image.webp" />
     <Content Include="Content\assets\images\left-image.webp" />
+    <Content Include="Content\admin\assets\fonts\font-awesome\fontawesome-webfont.eot" />
+    <Content Include="Content\admin\assets\fonts\font-awesome\fontawesome-webfont.ttf" />
+    <Content Include="Content\admin\assets\fonts\font-awesome\fontawesome-webfont.woff" />
+    <Content Include="Content\admin\assets\fonts\font-awesome\fontawesome-webfont.woff2" />
+    <Content Include="Content\admin\assets\fonts\ico\icofont.eot" />
+    <Content Include="Content\admin\assets\fonts\ico\icofont.ttf" />
+    <Content Include="Content\admin\assets\fonts\ico\icofont.woff" />
+    <Content Include="Content\admin\assets\fonts\themify\themify.eot" />
+    <Content Include="Content\admin\assets\fonts\themify\themify.ttf" />
+    <Content Include="Content\admin\assets\fonts\themify\themify.woff" />
+    <Content Include="Content\admin\assets\js\handlebars.js%281%29" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -503,6 +640,8 @@
     <Content Include="Views\Home\AddBusinessIdeas.cshtml" />
     <Content Include="Views\Shared\_AdminLayout.cshtml" />
     <Content Include="Views\Home\AddVideos.cshtml" />
+    <Content Include="Views\Home\AddChapters.cshtml" />
+    <Content Include="Views\Home\AdminIndex.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
