--- a/Vitkund/Vitkund.csproj
+++ b/Vitkund/Vitkund.csproj
@@ -147,6 +147,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\tblAdmin.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\tblBusinessidea.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -642,6 +645,7 @@
     <Content Include="Views\Home\AddVideos.cshtml" />
     <Content Include="Views\Home\AddChapters.cshtml" />
     <Content Include="Views\Home\AdminIndex.cshtml" />
+    <Content Include="Views\Home\BusinessIdeaDetail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
