--- a/Vitkund/Vitkund.csproj
+++ b/Vitkund/Vitkund.csproj
@@ -659,6 +659,7 @@
     <Content Include="Views\Home\BusinessIdeaDetail.cshtml" />
     <Content Include="Views\Home\myaccount.cshtml" />
     <Content Include="Views\Home\AddCourses.cshtml" />
+    <Content Include="Views\Home\ManageVideoSequence.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
